crates/carta/tests/snapshots/golden_writer__docbook__table__table-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<informaltable>
  <tgroup cols="2">
    <colspec align="left" />
    <colspec align="left" />
    <thead>
      <row>
        <entry>
          h1
        </entry>
        <entry>
          h2
        </entry>
      </row>
    </thead>
    <tbody>
      <row>
        <entry>
          a
        </entry>
        <entry>
          b
        </entry>
      </row>
    </tbody>
  </tgroup>
</informaltable>
